@@ -56,6 +56,13 @@ distcc_hosts:
 # portage_confdir: /etc/portage
 portage_confdir:
 
+# This allows the optional directory containing the output packages for catalyst.
+# Mainly used as a way for different spec files to access the same cache directory
+# Default behavior is for this location to be autogenerated by catalyst based on the spec file.
+# example:
+# pkgcache_path: /tmp/packages
+pkgcache_path:
+
 # Since GRP is capable of building packages/source sets for more than one CD,
 # this defines the layout for the directories under $clst_sharedir/builds.
 # example:
