@@ -56,6 +56,13 @@ distcc_hosts:
 # portage_confdir: /etc/portage
 portage_confdir:
 
+# This allows the optional directory containing the output packages for catalyst.
+# Mainly used as a way for different spec files to access the same cache directory
+# Default behavior is for this location to be autogenerated by catalyst based on the spec file.
+# example:
+# pkgcache_path: /tmp/packages
+pkgcache_path:
+
 # The livecd-stage1 target is where you will build packages for your CD.  These
 # packages can be built with customized USE settings.  The settings here are
 # additive to the default USE configured by the profile.  For building release
