@@ -56,6 +56,13 @@ distcc_hosts:
 # portage_confdir: /etc/portage
 portage_confdir:
 
+# This allows the optional directory containing the output packages for catalyst.
+# Mainly used as a way for different spec files to access the same cache directory
+# Default behavior is for this location to be autogenerated by catalyst based on the spec file.
+# example: 
+# pkgcache_path: /tmp/packages
+pkgcache_path:
+
 # The stage4-stage1 target is where you will build packages for your CD.  These
 # packages can be built with customized USE settings.  The settings here are
 # additive to the default USE configured by the profile.  For building release
@@ -72,18 +79,6 @@ stage4/use:
 # example:
 # stage4/packages: livecd-tools dhcpcd acpid apmd gentoo-sources kudzu-knoppix hotplug coldplug fxload irssi gpm syslog-ng parted links raidtools dosfstools nfs-utils jfsutils xfsprogs e2fsprogs reiserfsprogs ntfsprogs pwgen rp-pppoe screen mirrorselect penggy iputils hwdata-knoppix hwsetup lvm2 evms vim pptpclient mdadm ethtool wireless-tools prism54-firmware wpa_supplicant
 stage4/packages:
-
-
-# The cdfstype is used to determine what sort of CD we should build.  This is
-# used to set the type of loopback filesystem that we will use on our CD.
-# Possible options are as follows:
-# squashfs - This gives the best compression, but requires a kernel patch.
-# zisofs - This uses in-kernel compression and is supported on all platforms.
-# normal - This creates a loop without compression.
-# noloop - This copies the files to the CD directly, withuot using a loopback.
-# example:
-# stage4/fstype: squashfs
-stage4/fstype:
 
 # A fsscript is simply a shell script that is copied into the chroot of the CD
 # after the kernel(s) and any external modules have been compiled and is 
