@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.13 2005/11/02 21:54:29 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.14 2005/11/22 20:36:18 rocket Exp $
 
 """
 builder class for the tinderbox target
@@ -27,6 +27,14 @@ class tinderbox_target(generic_stage_target):
 		except CatalystError:
 			self.unbind()
 			raise CatalystError,"Tinderbox aborting due to error."
+
+        def set_pkgcache_path(self):
+            if self.settings.has_key("pkgcache_path"):
+                if type(self.settings["pkgcache_path"]) != types.StringType:
+                    self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
+            else:
+                generic_stage_target.set_pkgcache_path(self)
+	
 	def set_cleanables(self):
 	    self.settings["cleanables"]=["/etc/resolv.conf","/var/tmp/*","/root/*",\
 					"/usr/portage"]
